# pyGinkgo

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  README.md  REUSE.toml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build.yml  changelog.yaml  publish.yml  static_checks.yaml  superlinter.yml  test.yml  trigger-lrz-gitlab-ci.yaml  trigger_gitlab_pipeline.yml
.reuse/: dep5
bindings/: array.cpp  memory.cpp  python.cpp
ci/github/: cancel_triggered_pipelines.sh  trigger_pipeline.sh  wait_pipeline.sh
ci/lrz-gitlab/: build-and-test.sh
cmake/: AutoEnableDevice.cmake
examples/: distributed_solver.py  example_array.ipynb  example_dense.ipynb  example_paper.ipynb  example_spmv.ipynb
src/: array.cpp  dense.cpp  executor.cpp  matrix.cpp  memory.cpp  python.cpp  python.hpp  stream.cpp
src/cpp_bindings/: CMakeLists.txt  array.cpp  config_solver.cpp  convergence_logger.cpp  dense.cpp  distributed.cpp  dpcpp_queue_property.cpp  executor.cpp  half.hpp  logger.cpp  matrix.cpp  memory.cpp  python.cpp  python.hpp  stream.cpp  utils.hpp
src/cpp_bindings/factorization/: factorization.cpp  lu.cpp
src/cpp_bindings/preconditioner/: ilu.cpp
src/cpp_bindings/solver/: cg.cpp  config_solver.cpp  direct.cpp  gmres.cpp  triangular.cpp
src/pyGinkgo/: .gitignore  __init__.py  core.py  device.py  distributed.py  gko_types.py  preconditioner.py  rayleigh_ritz.py  solver.py  types.py  valid_types.py
src/solver/: gmres.cpp
tests/: test_array.py  test_cuda_executor.py  test_cupy.py  test_dense.py  test_gpu_access.py  test_import.py  test_matrix.py  test_solver.py  test_sparse.py  test_torch.py
tests/cpp_bindings/: CMakeLists.txt  dense_example.mtx  test_array.py  test_cuda_executor.py  test_cupy.py  test_dense.py  test_direct_solver.py  test_dpcpp_executor.py  test_factorization.py  test_hip_executor.py  test_import.py  test_iterative_solver.py  test_solver.py  test_sparse.py  test_torch.py  test_utils.py
tests/pyGinkgo/: CMakeLists.txt  test_RR.py  test_core.py  test_solve.py
