[project]
name = "pyGinkgo"
version = "0.0.0"
description = "PyGinkgo is a Python binding for the Ginkgo framework, providing access to Ginkgo's powerful linear algebra capabilities from Python."
authors = [
    {name = "Gregor Olenik", email = "go@hpsim.de"},
    {name = "Lukas Petermann", email = "lukas.petermann13@gmail.com"}
]
license = {text = "BSD-2-Clause"}
readme="README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
]

[build-system]
requires = ["py-build-cmake~=0.5.0"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
name = "pyGinkgo"


[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "src/pyGinkgo/*.cpp"]

[tool.py-build-cmake.cmake]
minimum_version="3.20"
preset="release"
build_presets=["release"]


[project_urls]
Documentation= ""
Changelog= ""
Issues= ""

[project.optional-dependencies]
test = [
    "pytest",
]
