[project]
name = "pyGinkgo"
version = "0.0.0"
description = "PyGinkgo is a Python binding for the Ginkgo framework, providing access to Ginkgo's powerful linear algebra capabilities from Python."
authors = [
    {name = "Roman Mishchuk", email= "romamiykg@gmail.com"},
    {name = "Keshvi Tuteja", email= "keshvi.tuteja@kit.edu"},
    {name = "Yu-Hsiang M. Tsai", email= "yhmtsai@gmail.com"},
    {name = "Gregor Olenik", email = "gregor.olenik@tum.de"},
]
license = {text = "MIT"}
readme="README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
]

[build-system]
requires = ["py-build-cmake~=0.5.0"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
name = "pyGinkgo"


[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "src", "cmake/*", "tests"]

[tool.py-build-cmake.cmake]
minimum_version="3.20"
build_type="Release"
build_args=["-j"]

[project_urls]
Documentation= "https://github.com/Helmholtz-AI-Energy/pyGinkgo/blob/main/README.md"
Changelog= "https://github.com/Helmholtz-AI-Energy/pyGinkgo/blob/main/CHANGELOG.md"
Issues= "https://github.com/Helmholtz-AI-Energy/pyGinkgo/issues"

[project.optional-dependencies]
test = [
    "pytest",
]
